# rezombie

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
libs/common/: CMakeLists.txt
libs/common/include/common/: util.h
libs/common/src/: util.cpp
libs/cssdk/: .clang-format  .clang-tidy  .commits  .editorconfig  CMakeLists.txt  README.md
libs/cssdk/include/cssdk/common/: cl_entity.h  const.h  cvar.h  entity_state.h  event_args.h  hook_chain_priority.h  hook_chains.h  model.h  net_address.h  sequence.h  strind.h  trace.h  user_cmd.h  vector.h  weapon_data.h
libs/cssdk/include/cssdk/dll/: activity.h  ammo.h  cdll_dll.h  decals.h  entity_base.h  ext_defs.h  func_break.h  game_rules.h  gib.h  hint_message.h  items.h  monster_base.h  monster_event.h  monsters.h  observer.h  player.h  player_consts.h  save_restore.h  unified_signals.h  weapon_type.h  weapons.h
libs/cssdk/include/cssdk/engine/: consistency.h  custom.h  delta_packet.h  edict.h  eiface.h  engine_hlds_api.h  entity_vars.h  global_vars.h  net.h  pr_dlls.h  prog_defs.h  server.h  server_static.h  studio.h
libs/cssdk/include/cssdk/game_shared/: game_event.h  voice_manager.h
libs/cssdk/include/cssdk/pm_shared/: pm_defs.h  pm_materials.h  pm_move_vars.h  pm_trace.h
libs/cssdk/include/cssdk/public/: interface.h  os_defs.h  regamedll.h  (+2 more)
libs/cssdk/src/: interface.cpp  utils.cpp
libs/messages/: CMakeLists.txt
libs/messages/include/messages/: engine_message.h  hud_message_params.h  temporary_entity.h  user_message.h
libs/messages/src/: engine_message.cpp  user_message.cpp
libs/vhooks/: CMakeLists.txt
libs/vhooks/include/vhooks/: entity_virtual_table.h  hook_index.h  memory_unlocker.h  vhooks.h
libs/vhooks/src/: vhooks.cpp
rezombie/: CMakeLists.txt
rezombie/include/rezombie/: convars.h  util.h
rezombie/include/rezombie/amxmodx/: common.h  game_rules.h  items.h  melee.h  player.h  player_class.h  player_model.h  player_props.h  player_subclass.h  utils.h  weapon.h
rezombie/include/rezombie/colors/: colors.h
rezombie/include/rezombie/configs/: main_config.h
rezombie/include/rezombie/core/: amxx_base_feature.h  amxx_feature.h  amxx_features_store.h  base_module.h  base_object.h  base_weapon.h  module.h  modules_store.h  object.h
rezombie/include/rezombie/entity/: extras.h  game_mode.h  item.h  player_class.h  player_model.h  player_props.h  player_sound.h  player_subclass.h  weapon.h  weather.h
rezombie/include/rezombie/gamerules/: consts.h  game_mode.h  game_rules.h
rezombie/include/rezombie/main/: convars.h  engine_hooks.h  gamedll_hooks.h  main.h  message_hooks.h  util.h
rezombie/include/rezombie/map/: environment.h  extras.h  map_spawns.h
rezombie/include/rezombie/messages/: engine_message.h  hud_message_params.h  temporary_entity.h  user_message.h  weather_type.h
rezombie/include/rezombie/modelpreview/: model_preview.h
rezombie/include/rezombie/modules/: game_mode.h  item.h  melee.h  player_class.h  player_model.h  player_nightvision.h  player_props.h  player_sound.h  player_subclass.h  weapon.h
rezombie/include/rezombie/player/: extra_jump_vars.h  flashlight_vars.h  healthbar.h  join_preview_vars.h  jumps_vars.h  long_jump.h  long_jump_vars.h  map_camera_vars.h  nightvision_vars.h  player.h  player_class.h  player_item.h  player_model.h  player_nightvision.h  player_preview.h  player_props.h  player_sound.h  player_subclass.h  player_vars.h  players.h  preview_vars.h  third_camera_vars.h  weather.h  world_preview.h  world_preview_vars.h
rezombie/include/rezombie/preview/: join_preview.h  world_preview.h
rezombie/include/rezombie/sounds/: sounds.h
rezombie/include/rezombie/thirdcamera/: third_camera.h
rezombie/include/rezombie/weapons/: base_weapon.h  melee.h  weapon.h  weapon_box.h  weapons.h
rezombie/src/: convars.cpp  main.cpp  util.cpp
rezombie/src/amxmodx/: common.cpp  game_rules.cpp  items.cpp  melee.cpp  player.cpp  player_class.cpp  player_model.cpp  player_props.cpp  player_subclass.cpp  weapon.cpp
rezombie/src/colors/: colors.cpp
rezombie/src/colors/api/: colors.cpp
rezombie/src/configs/: main_config.cpp
rezombie/src/currency/api/: currency.cpp  price.cpp
rezombie/src/gamerules/: game_rules.cpp  player.cpp
rezombie/src/gamerules/api/: game_rules.cpp  modes.cpp
rezombie/src/items/api/: items.cpp
rezombie/src/main/: convars.cpp  engine_hooks.cpp  gamedll_hooks.cpp  main.cpp  message_hooks.cpp  util.cpp
rezombie/src/main/api/: main.cpp
rezombie/src/map/: environment.cpp  map_cameras.cpp  map_spawns.cpp
rezombie/src/map/api/: environment.cpp  extras.cpp  fog.cpp  map_cameras.cpp
rezombie/src/messages/: engine_message.cpp  user_message.cpp
rezombie/src/messages/api/: engine_message.cpp  user_message.cpp
rezombie/src/modelpreview/: model_preview.cpp  world_preview.cpp
rezombie/src/modelpreview/api/: model_preview.cpp
rezombie/src/models/: models.cpp
rezombie/src/models/api/: models.cpp  models_pack.cpp
rezombie/src/modes/api/: modes.cpp
rezombie/src/player/: extra_jumps.cpp  flashlight.cpp  join_preview.cpp  jumps.cpp  long_jump.cpp  map_camera.cpp  nightvision.cpp  player.cpp  player_base.cpp  player_cstrike.cpp  player_entity_vars.cpp  player_preview.cpp  player_vars.cpp  player_weapons.cpp  players.cpp  preview.cpp  third_camera.cpp  weather.cpp  world_preview.cpp
rezombie/src/player/api/: flashlight.cpp  jumps.cpp  long_jump.cpp  nightvision.cpp  player.cpp  player_class.cpp  player_props.cpp  player_subclass.cpp
rezombie/src/player/core/: player_base.cpp  player_cstrike.cpp  player_entity_vars.cpp
rezombie/src/preview/: join_preview.cpp  world_preview.cpp
rezombie/src/preview/api/: join_preview.cpp  world_preview.cpp
rezombie/src/sounds/: sounds.cpp
rezombie/src/sounds/api/: sounds.cpp
rezombie/src/thirdcamera/: third_camera.cpp
rezombie/src/thirdcamera/api/: third_camera.cpp
rezombie/src/weapons/: melee.cpp  weapon_box.cpp  weapons.cpp
rezombie/src/weapons/api/: melee.cpp  weapons.cpp
rezombie/src/wrappers/: player_base_wrapper.cpp  player_item_wrapper.cpp
(+204 files in other folders)
